dockprom/prometheus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: prometheus
  name: prometheus
  namespace: monitoring  
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: prometheus
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus
        - --web.console.libraries=/etc/prometheus/console_libraries
        - --web.console.templates=/etc/prometheus/consoles
        - --storage.tsdb.retention.time=200h
        - --web.enable-lifecycle
        image: prom/prometheus:v2.11.1
        name: prometheus
        volumeMounts:
        - name: prometheus-config-files
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
        resources: {}
      restartPolicy: Always
      volumes:
        - name: prometheus-config-files
          configMap:
            name: prometheus-configmap
status: {}
