dockprom/pushgateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: pushgateway
  name: pushgateway
  namespace: monitoring
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: pushgateway
    spec:
      containers:
      - image: prom/pushgateway:v0.9.0
        name: pushgateway
        resources: {}
      restartPolicy: Always
status: {}
