dockprom/caddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: caddy
  name: caddy
  namespace: monitoring
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  - name: "9090"
    port: 9090
    targetPort: 9090
  - name: "9093"
    port: 9093
    targetPort: 9093
  - name: "9091"
    port: 9091
    targetPort: 9091
  selector:
    service: caddy
status:
  loadBalancer: {}
