dockprom/cadvisor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
  namespace: monitoring
  labels:
    service: cadvisor
spec:
  ports:
  - name: "8080"
    protocol: "TCP"
    port: 8080
    targetPort: 8080
  selector:
    service: cadvisor
status:
  loadBalancer: {}
