dockprom/nodeexporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeexporter
  namespace: monitoring
  labels:
    service: nodeexporter
spec:
  ports:
  - name: "9100"
    protocol: "TCP"
    port: 9100
    targetPort: 9100
  selector:
    service: nodeexporter
status:
  loadBalancer: {}
