dockprom/grafana-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: agilemeter-grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: agilemeter-grafana.14f2c135264448be9c42.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    service: grafana
spec:
  ports:
  - name: "3000"
    protocol: "TCP"
    port: 3000
    targetPort: 3000
  selector:
    service: grafana
status:
  loadBalancer: {}
