dockprom/prometheus-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: agilemeter-prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: agilemeter-prometheus.4fad901eba544c68aeb3.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    service: prometheus
spec:
  ports:
  - name: "9090"
    protocol: "TCP"
    port: 9090
    targetPort: 9090
  selector:
    service: prometheus
status:
  loadBalancer: {}
